--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,16 @@
     max-width: 45vw;
     max-height: 75vh;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+/* ::-webkit-scrollbar {
+    display: none;
+} */
+
+/* Hide scrollbar for IE, Edge and Firefox */
+/* body {
+    -ms-overflow-style: none; */
+/* IE and Edge */
+/* scrollbar-width: none; */
+/* Firefox */
+/* } */
